[project]
name = "memory-agent"
version = "0.1.0"
description = "CLI conversational assistant with persistent long-term memory across sessions, built with LangGraph and mem0"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=1.4.6",
    "langchain-core>=1.4.8",
    "langgraph>=1.2.6",
    "mem0ai>=2.0.7",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
